Fixed: favicon, menu icon, button in form, phone on mobile

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -25,6 +25,7 @@
   }
 
   &--for-form {
+    margin: 0;
     font-family: inherit;
     font-size: 16px;
     line-height: 27px;
