--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -19,8 +19,8 @@
     padding-right: 20px;
 
     font-weight: 700;
-    font-size: 16px;
-    line-height: 27px;
+    font-size: 9px;
+    line-height: 15px;
     text-align: right;
     color: #fff;
     text-transform: uppercase;
@@ -29,6 +29,11 @@
     pointer-events: none;
 
     transition: opacity 0.3s;
+
+    @include onTablet() {
+      font-size: 16px;
+      line-height: 27px;
+    }
 
     &--count-1 {
       transform: translateY(calc(-100% - 8px));
